# tiny-mirror

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tiny-mirror.service
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260430_c441566144e8_create_initial_schema.py  20260501_d8a3f1c0e2a7_relax_product_type_check.py  20260504_a1b2c3d4e5f6_ml_stock_integration.py  20260504_b7c8d9e0f1a2_drop_mercadolivre_stock_table.py  20260506_mv_coverage_create.py  20260506_sku_prefix_supplier.py  20260507_invoices.py  20260511_mv_coverage_v5.py  20260511_mv_coverage_v6.py  20260511_mv_coverage_v7.py  20260511_mv_coverage_v8.py  20260511_mv_coverage_v9.py  20260511_stock_history_purchase_orders.py  20260512_ml_listings.py  20260512_mv_coverage_v11.py  20260512_sku_prefix_supplier_v2.py  20260512_sync_logs_ml_listings_type.py  20260514_fulfillment_transfers.py  20260518_ml_promo_v1.py  20260519_fl_webhook_delta_v1.py  20260519_manual_status_v1.py  20260519_mv_coverage_v13.py  20260519_mv_coverage_v14.py  20260519_mv_coverage_v15.py  20260521_cap_skip_winning_v1.py  20260521_caps_per_mlb_v1.py  20260521_ml_catalog_status_v1.py  20260521_promo_decisions_v1.py  20260525_fl_snapshot_with_galpao.py  20260525_mv_coverage_v16.py  20260527_fl_stock_corrections_log.py  20260527_invoice_items.py  20260527_ml_fl_stock_sync_type.py  20260527_phantom_products_log.py  20260527_products_sku_partial_unique.py  20260529_fl_in_transfer.py  20260529_partial_reception.py  20260529_promo_decisions_expired.py  20260529_promo_decisions_ml_apply.py  20260602_decision_context.py  (+29 more)
deploy/nginx/: tiny-mirror.conf
scripts/: audit_tiny_vs_db.py  backfill_pending_transfers.py  create_readonly_user.sql  load_flex_fee_calibration.py  ml_fl_stock_dryrun.py  run_e2e_precommit.sh  seed_initial_token.py
scripts/alerts/: galpao_anomaly_notify.py
scripts/maintenance/: audit_cancelled_orders_invoices.py  audit_phantom_products.py  backfill_invoice_items.py  fl_stock_correction.py  match_tiny_ml_orders.py
src/tiny_mirror/: config.py  database.py  exceptions.py  logging_config.py  main.py  rabbitmq.py  redis_client.py
src/tiny_mirror/api/: dependencies.py  error_handlers.py  middleware.py  schemas.py
src/tiny_mirror/api/routers/: fulfillment.py  health.py  ml_fl_tracking.py  ml_promotions.py  orders.py  products.py  sync.py  webhooks.py
src/tiny_mirror/domain/: interfaces.py  models.py
src/tiny_mirror/infrastructure/orm/: models.py
src/tiny_mirror/infrastructure/repositories/: fl_stock_correction_log_repository.py  fulfillment_transfer_repository.py  invoice_item_repository.py  invoice_repository.py  mercadolivre_stock_repository.py  ml_fl_tracking_repository.py  ml_listing_repository.py  ml_promo_repository.py  ml_token_repository.py  order_repository.py  phantom_products_log_repository.py  product_repository.py  sale_bucket_repository.py  stock_repository.py  sync_log_repository.py  (+2 more)
src/tiny_mirror/mappers/: invoice_mapper.py  order_mapper.py  product_mapper.py  stock_mapper.py
src/tiny_mirror/observability/: seq_handler.py
src/tiny_mirror/queue/: __init__.py  base_consumer.py  bootstrap.py  publisher.py  topology.py
src/tiny_mirror/scheduler/: jobs.py
src/tiny_mirror/services/: cap_recompute_service.py  catalog_status_sync_service.py  cost_refresh_service.py  feature_flags.py  fl_stock_correction_service.py  flex_fee_calibration_service.py  fulfillment_reception_service.py  fulfillment_transfer_service.py  gas_client.py  invoice_sync_service.py  manual_status_sync_service.py  mercadolivre_stock_service.py  mercadolivre_token_service.py  ml_fl_tracking_service.py  ml_listing_sync_service.py  ml_panel_scrape_service.py  ml_promotion_service.py  ml_resubscribe_service.py  ml_sales_sync_service.py  ml_webhook_processor.py  order_sync_service.py  phantom_detection_service.py  pricing_service.py  product_sync_service.py  promo_learning_service.py  promotion_mirror_service.py  purchase_order_sync_service.py  sale_bucket_service.py  sheets_manual_status.py  stock_history_sync_service.py  stock_sync_service.py  token_service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_api.py  test_e2e_invoices.py  test_e2e_orders.py  test_e2e_products.py  test_e2e_promo_started_cleanup.py  test_e2e_sale_buckets.py  test_e2e_scheduler.py  test_e2e_stock.py  test_e2e_token.py  test_e2e_webhooks.py
tests/integration/: test_full_order_flow.py  test_token_repository.py
tests/unit/: conftest.py  test_base_consumer.py  test_cap_recompute_service.py  test_cost_refresh_fail_loud.py  test_cost_refresh_service.py  test_feature_flags.py  test_fl_stock_correction_pingpong.py  test_fl_stock_correction_service.py  test_flex_fee_calibration.py  test_fulfillment_reception_service.py  test_fulfillment_transfer_service.py  test_galpao_anomaly.py  test_gas_client.py  test_invoice_mapper.py  test_manual_status_sync_service.py  test_mercadolivre_client.py  test_mercadolivre_stock_service.py  test_mercadolivre_token_service.py  test_ml_fl_tracking_flows.py  test_ml_fl_tracking_service.py  test_ml_listing_sync_service.py  test_ml_panel_scrape.py  test_ml_promo_analyze_dry.py  test_ml_promo_apply_body.py  test_ml_promo_apply_floor_guard.py  test_ml_promo_bulk_decide.py  test_ml_promo_decision_override.py  test_ml_promo_enroll.py  test_ml_promo_expire_stale.py  test_ml_promo_logging.py  test_ml_promo_modify.py  test_ml_promo_parse_iso_dt.py  test_ml_promo_price_to_win.py  test_ml_promo_reconcile_started.py  test_ml_promo_resubscribe.py  test_ml_promo_score_candidate.py  test_ml_sales_sync_service.py  test_ml_webhook.py  test_order_mapper.py  test_pricing_service.py  (+12 more)
(+10 files in other folders)
