[tool.poetry]
name = "tiny-mirror"
version = "1.0.0"
description = "Espelho local de dados do Tiny ERP via API REST"
authors = ["tiny-mirror"]
readme = "README.md"
packages = [{include = "tiny_mirror", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
gunicorn = "^23"
sqlalchemy = "^2.0"
asyncpg = "^0.30"
alembic = "^1.14"
redis = "^5.2"
aio-pika = "^9.4"
httpx = "^0.28"
pydantic = "^2.10"
pydantic-settings = "^2.7"
structlog = "^24.4"
apscheduler = "^3.10"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
factory-boy = "^3.3"
testcontainers = "^4.8"
ruff = "^0.8"
mypy = "^1.13"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: Slow tests that require real Tiny API credentials (deselect with '-m not e2e')",
    "integration: Tests that require a real PostgreSQL database and Redis",
    "unit: Fast unit tests that use mocks for all external dependencies",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src/tiny_mirror"]
omit = [
    "tests/*",
    "alembic/*",
    "scripts/*",
    "src/tiny_mirror/main.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["tiny_mirror"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
exclude = ["alembic/", "tests/", "scripts/"]
